# diffie-hellman-protocol

./: .gitmodules  CMakeLists.txt  main.cpp  menu.cpp  menu.h
include/: check_sum.h  control.h  diffie_hellman.h  encryption.h  errors.h  hash_validator.h  protocol.h  session.h
src/: diffie_hellman.cpp  encryption.cpp  hash_validator.cpp  protocol.cpp  session.cpp
